log
Fri Mar 11 15:39:50 HSP 2022: 
 tests:  0|7
total_score: 0/70
c448578
Fri Mar 11 18:27:51 HSP 2022: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|6
total_score: 10/70
d321798
Fri Mar 11 23:08:18 HSP 2022: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:45:19: error: expected expression before ']' token
          sumaN( a[], n);
                   ^
exercises.c:46:18: error: 'tot' undeclared (first use in this function)
          *suma = tot;
                  ^~~
exercises.c:46:18: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d3abccd
Fri Mar 11 23:11:07 HSP 2022: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
test.c: In function 'sumaNultimos':
exercises.c:48:16: error: 'tot' may be used uninitialized in this function [-Werror=maybe-uninitialized]
          *suma = tot;
          ~~~~~~^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c0c9899
Fri Mar 11 23:13:05 HSP 2022: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|6
total_score: 10/70
cafe32f
Fri Mar 11 23:21:25 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
218c89f
Fri Mar 11 23:39:02 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
3dd76b8
Fri Mar 11 23:40:26 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
aaecd6a
Fri Mar 11 23:49:03 HSP 2022: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  1|6
total_score: 10/70
1abb0b8
Fri Mar 11 23:52:39 HSP 2022: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  1|6
total_score: 10/70
d280ddc
Sat Mar 12 00:05:18 HSP 2022: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:42:8: error: variable 'cont' set but not used [-Werror=unused-but-set-variable]
    int cont;
        ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8c6119d
Sat Mar 12 00:17:04 HSP 2022: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
caf737c
Sat Mar 12 00:19:26 HSP 2022: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
817e9bf
